package com.example.event.consumer;

public enum ConsumerRoutingMode {
    DIRECT,
    INBOX
}
